# theme-extractor

./: .env.template  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  SUPPORT.md  agent.md  plan.md  pyproject.toml  ruff.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  tech-debt.md
.github/review/: COPILOT_REVIEW_PROMPTS.md  REPO_COHERENCE_PLAYBOOK.md  REVIEW_GUIDE.md
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile.tools  __init__.py  compose.elasticsearch.yaml  compose.opensearch.yaml  index_corpus.py
docs/: Makefile  __init__.py  conf.py  index.md
docs/adr/: 0000-template.md  README.md
docs/api/: cli.rst  evaluation.rst  extraction.rst  ingestion.rst  search.rst
docs/engineering/: DEFINITION_OF_DONE.md  README.md  REVIEW_RUNBOOK.md
howto/: README.md  benchmark.md  docker-local.md  evaluation.md  extract.md  ingest.md  release.md  report.md  troubleshooting.md
scripts/: clear_results.sh  ingest_extract_benchmark.sh
skills/architecture/: SKILL.md
skills/code-style/: SKILL.md
skills/review-followup/: SKILL.md
skills/testing/: SKILL.md
skills/tooling/: SKILL.md
src/theme_extractor/: __init__.py  cli.py  cli_commands.py  cli_parser.py  errors.py
src/theme_extractor/cli/: __init__.py  argument_parser.py  command_handlers.py  common_runtime.py  entrypoint.py  ingest_backend_indexing.py
src/theme_extractor/domain/: __init__.py  contracts.py  enums.py
src/theme_extractor/evaluation/: __init__.py  metrics.py
src/theme_extractor/extraction/: __init__.py  baseline_backend_queries.py  baselines.py  bertopic.py  characterization.py  embedding_cache.py  keybert.py  llm.py  utils.py
src/theme_extractor/ingestion/: __init__.py  cleaning.py  extractors.py  pipeline.py
src/theme_extractor/reporting/: __init__.py  markdown.py
src/theme_extractor/resources/: __init__.py  stopword_column_names.json  stopwords_en_fallback.txt  stopwords_fr_fallback.json  stopwords_fr_fallback.txt
src/theme_extractor/search/: __init__.py  adapters.py  factory.py  protocols.py
tests/: conftest.py
tests/end2end/: test_backend_end2end.py  test_cli_end2end.py  test_ingestion_end2end_formats.py
tests/integration/: test_baseline_combinations.py  test_cli_combinations.py  test_ingestion_combinations.py  test_ingestion_extractors.py  test_search_backends.py
tests/unit/: test_cli.py  test_contracts.py  test_docker_index_corpus.py  test_enums.py  test_evaluation_metrics.py  test_extraction_baselines.py  test_extraction_bertopic.py  test_extraction_characterization.py  test_extraction_embedding_cache.py  test_extraction_keybert.py  test_extraction_llm.py  test_ingestion_cleaning.py  test_ingestion_extractors_unit.py  test_ingestion_pipeline.py  test_reporting_markdown.py  test_search_backend.py
