[project]
name = "theme-extractor"
version = "0.1.0"
description = "Parse a corpus, manage it and extract themes from a corpus."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE.md" }
keywords = ["theme extraction", "corpus management", "text analysis", "python", "elasticsearch", "cli", "opensearch", "llm", "keyBERT", "sentence-transformers", "BERTopics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "httpx>=0.28.1",
    "structlog>=25.5.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.3.0",
    "numpy>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.15",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-sugar>=1.1.1",
    "pre-commit>=4.5.1",
    "detect-secrets>=1.5.0",
]
bert = [
  "keyBERT>=0.7.0",
  "sentence-transformers>=5.2.2",
  "BERTopic>=0.15.0",
  "umap-learn>=0.5.3",
  "numba>=0.63.1",
  "llvmlite>=0.46.0",
]
elasticsearch = [
  "elasticsearch>=9.3.0",
]
opensearch = [
  "opensearch-py>=3.1.0",
]
llm = [
  "openai>=1.68.2",
]

[build-system]
requires = ["hatchling", "build"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/theme_extractor"]
include = ["src/theme_extractor/**"]
exclude = ["src/theme_extractor/**/*.pyc", "src/theme_extractor/__pycache__/**"]

[tool.hatch.build.targets.sdist]
include = ["src/theme_extractor/**", "README.md", "LICENSE.md", "pyproject.toml"]
exclude = ["src/theme_extractor/**/*.pyc", "src/theme_extractor/__pycache__/**"]


[project.scripts]
theme-extractor = "theme_extractor.cli:main"

[project.urls]
Homepage = "https://github.com/Guillaume-Lombardo/theme-extractor"
Repository = "https://github.com/Guillaume-Lombardo/theme-extractor"
Issues = "https://github.com/Guillaume-Lombardo/theme-extractor/issues"


[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
addopts = "-ra -q -m unit --strict-markers --cov=src --cov-report=term-missing:skip-covered --cov-report=html"
pythonpath = ["src"]
markers = [
    "unit: mark a test as a unit test.",
    "integration: mark a test as an integration test.",
    "end2end: mark a test as an end-to-end test.",
]

[tool.coverage.run]
branch = true
source = ["src/theme_extractor"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "def __repr__",
    "def __str__",
    "if self.debug",
    "if settings.DEBUG",
    "if __name__ .__main__.:",
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
]
show_missing = true
skip_covered = true
precision = 2
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"
title = "Theme Extractor Coverage Report"
